# axvisor

./: .gitignore  Boot-on-qemu.md  Boot-on-rk3588.md  Cargo.toml  Makefile  README.md  README_CN.md  activate.sh  bootstrap.sh  build.rs  requirements.txt  rust-toolchain.toml  scripts.txt  setup_test.sh  task.py
.github/workflows/: build.yml  test.yml
.github/workflows/actions/setup-nimbos-guest-image/: action.yml
arceos-vmm/: Cargo.toml
arceos-vmm/configs/vms/: nimbos-x86_64.toml
arceos-vmm/src/: hal.rs
arceos-vmm/src/vmm/: timer.rs
configs/: defconfig.toml
configs/vms/: aio-3588jd4.dts  aio-rk3588-jd4-vm1.dts  aio-rk3588-jd4-vm2.dts  aio-rk3588-jd4.dts  arceos-aarch64-gicv3-tester.toml  arceos-aarch64.toml  arceos-loongarch64.toml  arceos-riscv64-smp.toml  arceos-rk3588-aarch64-vm2.toml  arceos-x86_64.toml  hvconfig-nimbos-aarch64.toml  linux-qemu-aarch64-gicv3-a.toml  linux-qemu-aarch64-gicv3-b.toml  linux-qemu-aarch64.toml  linux-qemu_gicv3-b.dts  linux-qemu_gicv3.dts  linux-rk3588-aarch64-smp-vm1.toml  linux-rk3588-aarch64-smp-vm2.toml  linux-rk3588-aarch64-smp.toml  nimbos-aarch64.toml  nimbos-riscv64.toml  nimbos-x86_64.toml  qemu_gicv3.dts  rk3588jd4.dts
doc/: README.md  task.py-usage.md
platform/aarch64-generic/: Cargo.toml  axconfig.toml
platform/aarch64-generic/src/: lib.rs
platform/loongarch64-qemu-virt/: axconfig.toml
platform/x86-qemu-q35/: Cargo.toml  axconfig.toml
platform/x86-qemu-q35/src/: lib.rs
scripts/: build.py  clean.py  clippy.py  config.py  disk_img.py  run.py  setup.py
scripts/lds/: linker.lds.S
scripts/make/: platform.mk  qemu.mk  rk3588.mk
src/: hal.rs  main.rs
src/hal/: mod.rs
src/hal/arch/aarch64/: api.rs  mod.rs
src/hal/arch/loongarch64/: cache.rs
src/hal/arch/x86_64/: mod.rs
src/utils/: mod.rs
src/utils/arch/: mod.rs
src/utils/arch/aarch64/: cache.rs
src/vmm/: config.rs  hvc.rs  images.rs  ivc.rs  mock.rs  mod.rs  timer.rs  vcpus.rs
tool/: conn_2_serial.sh  dev_env.py
