[package]
edition = "2024"
name = "axplat-x86-qemu-q35"
version = "0.1.0"

[features]
fp-simd = ["axplat-x86-pc/fp-simd"]
reboot-on-system-off = ["axplat-x86-pc/reboot_on_system_off"]
rtc = ["axplat-x86-pc/x86_rtc"]

[dependencies]
axplat-x86-pc = {git = "https://github.com/arceos-org/axplat_crates", features=["irq", "smp"]}

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
